# bevy_svg_processor

./: Cargo.toml  README.md
src/: lib.rs
